# shikimori_parsing

./: app.py  main.py  products.json  pyproject.toml
