[tool.poetry]
name = "parsing-with-pagination"
version = "0.1.0"
description = ""
authors = ["saet0sy <saet0sy@gmail.com>"]
readme = "README.md"
packages = [{include = "parsing_with_pagination"}]

[tool.poetry.dependencies]
python = "^3.11"
beautifulsoup4 = "^4.12.2"
requests = "^2.31.0"
lxml = "^4.9.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
